[gd_scene load_steps=9 format=2]

[ext_resource path="res://Racing/Test/Stage.tscn" type="PackedScene" id=1]
[ext_resource path="res://Menu.gd" type="Script" id=2]
[ext_resource path="res://Fonts/ConsolasSmall.tres" type="DynamicFont" id=3]
[ext_resource path="res://UI/Theme.tres" type="Theme" id=4]
[ext_resource path="res://UI/Banner.png" type="Texture" id=5]
[ext_resource path="res://UI/github.svg" type="Texture" id=6]
[ext_resource path="res://UI/wcorp_logo_no_text.svg" type="Texture" id=7]
[ext_resource path="res://UI/MenuButtons.tres" type="ButtonGroup" id=8]

[node name="Menu" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Stage" parent="." instance=ExtResource( 1 )]

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.55
anchor_top = 0.3
anchor_right = 0.844
anchor_bottom = 0.844
theme = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 0.222
margin_left = 2.0
margin_top = 2.0
margin_right = 5.0
margin_bottom = -2.0
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="Button" parent="Panel"]
anchor_top = 0.521
anchor_right = 1.0
anchor_bottom = 0.674
margin_top = -0.0544128
margin_right = -0.0559692
margin_bottom = 0.00639343
rect_pivot_offset = Vector2( 166.8, 60 )
group = ExtResource( 8 )
text = "Play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HighScore" type="Label" parent="Panel"]
anchor_top = 0.674
anchor_right = 1.0
anchor_bottom = 0.827
margin_top = 0.00639343
margin_right = -0.0559692
margin_bottom = 0.0671997
rect_pivot_offset = Vector2( 166.8, 60 )
text = "Best Time: N/A"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Links" type="Control" parent="Panel"]
anchor_top = 0.245
anchor_right = 1.0
anchor_bottom = 0.521
margin_top = 0.0319977
margin_right = -0.0559692
margin_bottom = -0.0544128
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LinksLabel" type="Label" parent="Panel/Links"]
anchor_top = 0.245
anchor_right = 1.0
anchor_bottom = 0.306
margin_top = -22.05
margin_right = -0.0559692
margin_bottom = -6.54
rect_pivot_offset = Vector2( 166.8, 60 )
custom_fonts/font = ExtResource( 3 )
text = "This and more:"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Github" type="Button" parent="Panel/Links"]
anchor_top = 0.244
anchor_right = 0.5
anchor_bottom = 1.0
group = ExtResource( 8 )
text = "Github"
icon = ExtResource( 6 )
align = 0
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Wingcorp" type="Button" parent="Panel/Links"]
anchor_left = 0.5
anchor_top = 0.233
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.5
margin_top = 1.03
group = ExtResource( 8 )
text = "Wingcorp"
icon = ExtResource( 7 )
align = 0
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="Panel"]
anchor_top = 0.827
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 0.0671997
margin_right = -0.0559692
margin_bottom = -0.399994
group = ExtResource( 8 )
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Panel/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Panel/Links/Github" to="." method="_on_Github_pressed"]
[connection signal="pressed" from="Panel/Links/Wingcorp" to="." method="_on_Wingcorp_pressed"]
[connection signal="pressed" from="Panel/Quit" to="." method="_on_Quit_pressed"]
